<resources>
    <string name="app_name">Inventory</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="new_item">New Item</string>
    <string name="return_item">Return</string>
    <string name="list">List</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="underlined_sign_up"><u>Sign Up</u></string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="company_name">Cohabit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sk">SK #</string>
    <string name="button_back">Back</string>
    <string name="returnText">Return</string>
    <string name="companyLogo">CompanyLogo</string>
    <string name="sk_number">SK number</string>
    <string name="submit">Submit</string>

    <string name="color_info"><b>Color:</b></string>
    <string name="size_info"><b>Size:</b></string>

    <string name="location_info"><b>Location:</b></string>
    <string name="search">Search</string>

    <string name="category_info"><b>Category:</b></string>
    <string name="product_category">Product Category</string>
    <string-array name="product_category_array">
        <item>Chair</item>
        <item>Table</item>
        <item>Sofa</item>
        <item>Desk</item>
        <item>Bed</item>
        <item>Lamp</item>
        <item>Carpet</item>
        <item>Mirror</item>
    </string-array>

    <string name="material_info"><b>Material:</b></string>
    <string name="material_category">Material Category</string>
    <string-array name="material_category_array">
        <item>Fabric</item>
        <item>Mix</item>
        <item>Non-Fabric</item>
        <item>Mars</item>
    </string-array>

    <string name="functionality_info"><b>Functionality:</b></string>
    <string name="functionality">Functionality</string>
    <string-array name="functionality_array">
        <item>Repair</item>
        <item>Cleaning</item>
        <item>Repair and Cleaning</item>
        <item>Painting</item>
        <item>Does not need repair</item>
        <item>Does not need painting</item>
        <item>Does not need cleaning</item>
    </string-array>

    <string name="aesthetic_info"><b>Aesthetic:</b></string>
    <string name="aesthetic">Aesthetic</string>
    <string-array name="aesthetic_array">
        <item>Damaged</item>
        <item>Brand new</item>
        <item>Need to be checked more</item>
    </string-array>

    <string-array name="location_array">
        <item>Malmö</item>
        <item>Lund</item>
    </string-array>
</resources>