<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#65C1C9"
        android:padding="10dp"
        android:text="@string/button_back"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="225dp"
        android:layout_height="75dp"
        android:layout_marginStart="120dp"
        android:contentDescription="@string/companyLogo"
        android:src="@drawable/whatsapp_bild_2022_12_16_kl__11_35_24"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/ReturnText"
        android:layout_width="wrap_content"
        android:layout_height="111dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/returnText"
        android:textColor="#66C1CB"
        android:textColorLink="#66C1CB"
        android:textSize="60sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/SKNumber_PlainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="220dp"
        android:autofillHints="SK ¤"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/sk_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/sk"
        android:textColor="#65BFC7" />

    <Spinner
        android:id="@+id/spinnerFunctionality"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="290dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#65C0C8"
        android:contentDescription="@string/company_name"
        android:minHeight="48dp"
        android:radius="12dp"
        android:spinnerMode="dropdown"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/spinnerAesthetics"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="370dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#65C0C8"
        android:contentDescription="@string/company_name"
        android:minHeight="48dp"
        android:radius="12dp"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spinnerLocation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#65C0C8"
        android:contentDescription="@string/company_name"
        android:minHeight="48dp"
        android:radius="12dp"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="600dp"
        android:backgroundTint="#65C1C9"
        android:padding="10dp"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textStyle="normal"
        tools:ignore="TextContrastCheck" />


</FrameLayout>